--- a/vue Practice/index.html
+++ b/vue Practice/index.html
@@ -45,9 +45,8 @@
         }
       });
 
-      new Vue({
-
-      })
+      //이벤트 버스 중간 매개체
+      const eventBus = newVue();
     </script>
   </body>
 </html>
